--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: orange_lego
-description: "lego is all you need"
+description: "apply orange in lego project."
 #publish_to: 'none'
-#repository: https://github.com/melodysdreamj/lego
+repository: https://github.com/flutter-lego/orange_lego
 
 version: 1.0.0
 
