--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   flutter_lints:
   screenutil_lego: #@add
   bot_toast_lego: #@add
+  widget_binding_lego: #@add
 
 flutter:
   assets:
